tests/cases/compiler-development/artifact/errors/diagnostic-generic-explicit-arity.diagnostic
diagnostic error code=T0001 family=type message="generic function 'identity' expects 1 type argument" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-explicit-arity.ari" display="tests/cases/generics/errors/generic-explicit-arity.ari" bytes=105
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-explicit-arity.ari" line=6 column=10 end_line=6 end_column=18 byte_start=79 byte_end=87 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-explicit-arity.ari:6:10\n   |\n 6 |   return identity<i64, bool>(1);\n   |          ^^^^^^^^"
